--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -1,1 +1,272 @@
-<h1>VIEW TEAM</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Aravi Premachandran, David Hobson, Karnvir Bining, Nikhil Patel">
+
+    <title>Software Engineering Society</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="/stylesheets/viewteam.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+    <!-- <div class="jumbotron club-header">
+      <div class="container-fluid">
+        <div class="row">
+          <div>
+            <h1 class="display-5 club-title">Software Engineering Society</h1>
+            <hr class="title-divider">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-1"></div> 
+            <div class="col-md-5 text-center"><img class="banner" src="ses-header.png"></div>
+            <div class="col-md-5 text-center"><img class="banner" src="ses-header.png"></div> 
+            <div class="col-md-1"></div> 
+          </div>
+      </div>
+    </div> End jumbotron club-header -->
+
+    <div class="jumbotron club-header">
+        <div class="container-fluid text-center">
+            <h1 class="display-4 page-title">Software Engineering Society</h1>
+        </div>
+      </div>
+    <div class="row sidebar-main">
+      <nav class="col-md-2 d-none d-md-block bg-light sidebar text-left">
+        <div class="sidebar-sticky">
+          <ul class="nav flex-column">
+              <div class="sidebar-title">Our Club</div>
+              <hr class="sidebar-divider">
+            <!-- <li class="nav-item sidebar-header">
+                <div class="sidebar-title">Our Club</div>
+                <hr class="sidebar-divider">
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link active" href="#description">
+                <i class="nav-icon far fa-list-alt"></i>Description
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">
+                <i class="nav-icon far fa-images"></i>Photos
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#events">
+                <i class="nav-icon fas fa-calendar-alt"></i>Calendar
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">
+                <i class="nav-icon far fa-comments"></i>Contact Us
+              </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./index.html">
+                  <i class="nav-icon fas fa-home"></i>Maclubz Homepage
+                </a>
+              </li>
+            <hr class="sidebar-contact-divider">
+            <div class="sidebar-title">Connect with Us</div>
+
+            <hr class="sidebar-divider">
+
+            <div class="contact-info text-center">
+              <p>Software Engineering Society</p>
+              <p>software@mcmaster.ca</p>
+              <p>Office: ITB 232</p>
+            </div>
+
+            <hr class="sidebar-divider">
+
+            <div class="social-item">
+                <a class="nav-link" href="#">
+                    <i class="nav-icon fas fa-envelope"></i>Email
+                </a>
+            </div>
+
+            <div class="social-item">
+                <a class="nav-link" href="#">
+                  <i class="nav-icon fab fa-twitter-square"></i>Twitter
+                </a>
+            </div>
+            <div class="social-item">
+                <a class="nav-link" href="#">
+                  <i class="nav-icon fab fa-facebook"></i>Facebook
+                </a>
+            </div>
+
+          </ul>
+		    </div>
+      </nav> <!--End nav-->
+
+      <div class="container col-md-10 d-none d-md-block bg-light">
+        <div class="row section-club-highlight">
+          <div class="col-md-10">
+            <div>
+              <h1 class="display-5 section-title">Software Engineering Society</h1>
+              <hr class="section-title-divider" id="club-title-divider">
+            </div>
+            <div class="row content">
+              <div class="col-md-1"></div>
+              <div class="col-md-5 text-center"><img class="banner" src="/assets/small_SEC.png"></div>
+              <div class="col-md-1"></div>
+              <div class="col-md-5 text-left club-quotes">
+                "Software design is for everyone, young and old, male and female"
+                <div class="quote-author">- Jayanthi Uthayakumar, Club President</div>
+                "The Software Engineering Society is full of talent, technology, and learning"
+                <div class="quote-author">- John Smith, Member, 1st Year Engineering Student</div>
+              </div> <!--End club-quotes-->
+            </div>
+          </div>
+        </div> <!--End club-highlight-->
+
+        <hr class="section-divider">
+
+        <div class="row section-club-description" id="description">
+          <div class="col-md-10">
+            <div>
+              <h1 class="display-5 section-title">Description</h1>
+              <hr class="section-title-divider" id="description-title-divider">
+            </div>
+          <div class="row content">
+              <div class="col-md-10 text-left">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Dui nunc mattis enim ut tellus elementum. A condimentum vitae sapien pellentesque. Iaculis urna id volutpat lacus. 
+                  Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum. Sed elementum tempus egestas sed sed risus. 
+                  Gravida in fermentum et sollicitudin. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. 
+                  Tristique senectus et netus et malesuada fames ac turpis egestas. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae. 
+                  Nisl pretium fusce id velit ut tortor. Dui sapien eget mi proin sed libero enim sed faucibus. 
+                  Scelerisque fermentum dui faucibus in ornare quam viverra orci. Praesent semper feugiat nibh sed pulvinar proin gravida. 
+                  Sit amet venenatis urna cursus.</p>
+                  
+                  <p>Tortor at auctor urna nunc id. Vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. 
+                  Nunc mattis enim ut tellus elementum sagittis vitae. Ac tortor vitae purus faucibus ornare suspendisse. 
+                  Volutpat lacus laoreet non curabitur. Egestas congue quisque egestas diam in arcu cursus. 
+                  Vitae ultricies leo integer malesuada nunc. Aliquam malesuada bibendum arcu vitae elementum. 
+                  Natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. Dolor sit amet consectetur adipiscing elit ut. 
+                  Velit egestas dui id ornare arcu odio ut. Diam quis enim lobortis scelerisque fermentum dui. 
+                  Donec ultrices tincidunt arcu non sodales neque. Id leo in vitae turpis massa sed.</p>
+              </div>
+            </div>
+          </div>
+        </div> <!--End club-description-->
+
+        <hr class="section-divider">
+
+        <div class="row section-gallery" id="gallery">
+          <div class="col-md-10">
+            <div>
+              <h1 class="display-5 section-title">Photos</h1>
+              <hr class="section-title-divider" id="description-title-divider">
+            </div>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="/assets/open_source_img.jpg">
+                    <!--Image source: nochallenge.net-->
+                  </div>
+              
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="/assets/ml-infographic.jpg">
+                    <!--Image source: Intel Developer Zone-->
+                  </div>
+              
+                  <!-- <div class="carousel-item">
+                    <img class="d-block w-100" src="ses-header.png">
+                  </div> -->
+                </div>
+              
+                
+            </div>
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+            <!-- <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="indicator active"></li>
+                <li data-target="#myCarousel" data-slide-to="1" class="indicator"></li>
+                <li data-target="#myCarousel" data-slide-to="2" class="indicator"></li>
+            </ol> -->
+          </div>
+        </div> <!--End gallery-->
+      
+        <hr class="section-divider">
+
+        <div class="row section-calendar" id="events">
+          <div class="col-md-10">
+            <div>
+              <h1 class="display-5 section-title">Calendar of Events</h1>
+              <hr class="section-title-divider" id="events-title-divider">
+            </div>
+            <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=e5m14f28esqqtiacerh1imp5io%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto"></iframe>
+          </div>
+        </div> <!--End calendar section-->
+
+        <hr class="section-divider">
+
+        <div class="row section-contact text-center" id=contact>
+          <div>
+            <h1 class="display-5 section-title">Contact Us</h1>
+            <hr class="section-title-divider">
+          </div>
+          <div class="col-md-10">
+            <div class="row sub-section-contact">
+              <div class="col-md-6 contact-entry"><i class="nav-icon fas fa-envelope"></i> software@mcmaster.ca</div>
+              <div class="col-md-6 contact-entry"><i class="nav-icon fas fa-envelope"></i>
+                <input class="text-center contact-entry" placeholder="Subscribe to mailing list">
+              </div>
+            </div>
+          </div>
+        </div> <!--End contact section-->
+
+      </div>
+    </div> <!--End row-sidebar (main screen)-->
+	
+	   <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <!-- Supporting script files -->
+    <script>
+	$(function() {
+
+    var $sidebar   = $(".nav"), 
+        $window    = $(window),
+        offset     = $sidebar.offset(),
+        topPadding = 0;
+
+    $window.scroll(function() {
+        if ($window.scrollTop() > offset.top) {
+            $sidebar.stop().animate({
+                marginTop: $window.scrollTop() - offset.top + topPadding
+            });
+        } else {
+            $sidebar.stop().animate({
+                marginTop: 0
+            });
+        }
+    });
+    
+	});
+	</script>
+
+  </body>
+</html>
