--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -13,7 +13,7 @@ body{
 
 .landing-title {
 	color: #7A003C;
-	font-size: 170px;
+	font-size: 140px;
 	text-shadow: 0 10px 2px rgba(0,0,0,0.6);
   	-webkit-text-stroke-width: 4px;
   	-webkit-text-stroke-color: white;
@@ -88,10 +88,21 @@ body{
 .card {
 	box-shadow: 0 5px 10px rgba(0,0,0,0.3);
 	transition: 0.3s;
+	height: 100%;
 }
 
 .card:hover{
 	box-shadow: 5px 10px 10px rgba(0,0,0,0.6);
+	cursor: pointer;
+}
+
+.card-deck {
+  @include media-breakpoint-only(lg) {
+    column-count: 3;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 3;
+  }
 }
 
 .hr-maroon {
@@ -122,4 +133,101 @@ a:hover {
 
 .letter-select:active{
 	color: #7A003C;
+}
+
+.login {
+	position: absolute;
+	font-size: 30px;
+	color: #FDBF57;
+	top: 1%;
+	right: 2%;
+}
+
+.login:hover {
+	color: #ca8102;
+	cursor: pointer;
+}
+
+.login-input {
+	width: 80%;
+	border-radius: 100px;
+	font-size: 20px;
+	border: none;
+	padding: 5px;
+	padding-left: 35px;
+	border: 1px solid #5E6A71;
+	color: #5E6A71;
+	font-weight: 300;
+	caret-color: #7A003C;
+}
+
+.login-input:focus {
+	outline: 0;
+}
+
+.username-icon{
+	position: absolute;
+	left: 75px;
+	top: 38px;
+	color: #5E6A71;
+}
+
+.password-icon {
+	position: absolute;
+	left: 75px;
+	top: 95px;
+	color: #5E6A71;
+}
+
+.btn-login {
+	background-color: #7A003C;
+	width: 80%;
+	padding: 10px;
+	color: white;
+	border-radius: 7px;
+	border: none;
+}
+
+.btn-login:hover {
+	background-color: #4d0026;
+}
+
+.btn-login:focus {
+	outline: 0;
+}
+
+.title-area {
+	opacity: 0;
+	transform: translate(0, 20px);
+	animation: 0.7s title-animation linear forwards;
+}
+
+@keyframes title-animation {
+	100%{
+		opacity: 1;
+		transform: translate(0, 0);
+	}
+}
+
+
+
+.test {
+	color: #7A003C;
+	font-weight: bold;
+}
+
+.hide {
+	display: none !important;
+}
+
+.search-results {
+	display: flex;
+	height: 500px;
+    overflow-x: auto;
+	background-color: white;
+	border-radius: 10px;
+}
+
+.search-results .col {
+	width: 1000px !important;
 }
