--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -14,23 +14,10 @@
 		<div class="container title-area">
 			<h1 class="display-1 landing-title">MACLUBZ</h1>
 			<div class="search-area">
-				<i class="search-icon fas fa-search fa-2x"></i>
-				<input class="search-box" type="text" placeholder="Search for club...">
-			</div>
-			<div class="row search-results mt-1 text-left hide">
-				<% teams.forEach(function(team) { %>
-				<div class="col-4 p-3">
-					<div class="card">
-						<img class="card-img-top" src="<%= team.mainImage %>" alt="Card image cap">
-						<div class="card-body">
-							<h5 class="card-title"><%= team.name %></h5>
-							<hr class="hr-maroon">
-							<p class="card-text"><%= team.flavourText %></p>
-							<p class="card-text"><small class="text-muted"><a href="#"><i class="far fa-envelope"></i> <%=  team.email %></a></small></p>
-						</div>
-					</div>
-				</div>
-				<% });%> 
+				<form method="GET" action="/results">
+					<i class="search-icon fas fa-search fa-2x"></i>
+					<input name="query" class="search-box" type="text" placeholder="Search for club..." >
+				</form>
 			</div>
 		</div>
 		<h1 class="login" data-toggle="modal" data-target="#exampleModal">LOGIN</h1>
@@ -84,7 +71,7 @@
 			</div>
 	
 			<% teams.forEach(function(team) { %>
-			<div class="col-4 p-3">
+			<div class="col-4 p-3 teams" name="<%= team.name %>" type="<%= team.type %>">
 				<div class="card">
 					<img class="card-img-top" src="<%= team.mainImage %>" alt="Card image cap">
 					<div class="card-body">
@@ -96,6 +83,9 @@
 				</div>
 			</div>
 			<% });%> 
+			<div class="col-12">
+				<h1 class="hide no-results text-center">NO RESULTS</h1>	
+			</div> 
 		</div>
 	</div>
 
