--- a/views/results.ejs
+++ b/views/results.ejs
@@ -13,15 +13,15 @@
 		<div class="row">
 			<div class="col-12 d-flex p-3">
 				<h1 class="display-1 results-title">MACLUBZ</h1>
-				<div class="search-area w-75 mt-2">
+				<div class="search-area w-75 mt-3">
 					<i class="search-icon fas fa-search fa-2x"></i>
-					<input class="search-box" type="text" placeholder="Search for club...">
+					<input class="search-box" type="text" placeholder="Search for club..." value="<%= query %>">
 				</div>	
 			</div>
 		</div>
-		<div class="row">
+		<div class="row p-3">
 			<% teams.forEach(function(team) { %>
-			<div class="col-3 p-3">
+			<div class="col-3 p-3 teams" tags="<%= team.tags %>">
 				<div class="card">
 					<img class="card-img-top" src="<%= team.mainImage %>" alt="Card image cap">
 					<div class="card-body">
@@ -32,12 +32,15 @@
 					</div>
 				</div>
 			</div>
-			<% });%> 
+			<% });%>
+			<div class="col-12">
+				<h1 class="hide no-results text-center">NO RESULTS</h1>	
+			</div> 
 		</div>
 	</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script type="text/javascript" src="scripts/landing-search.js"></script>
+<script type="text/javascript" src="scripts/results-search.js"></script>
 </html>
