--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -14,107 +14,33 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="/stylesheets/viewteam.css" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/d-din" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
 
   </head>
 
   <body>
-    <!-- <div class="jumbotron club-header">
-      <div class="container-fluid">
-        <div class="row">
-          <div>
-            <h1 class="display-5 club-title">Software Engineering Society</h1>
-            <hr class="title-divider">
-          </div>
+    <div class="dropdown show">
+        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Navigation
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#description"><i class="nav-icon far fa-list-alt"></i>Club Description</a>
+            <a class="dropdown-item" href="#gallery"><i class="nav-icon far fa-images"></i>Photo Gallery</a>
+            <a class="dropdown-item" href="#events"><i class="nav-icon fas fa-calendar-alt"></i>Calendar of Events</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/"><i class="nav-icon fas fa-home"></i>Return to Maclubz Homepage</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="mailto:ses@noreply.com"><i class="nav-icon fas fa-envelope"></i>Send us an email</a>
         </div>
-        <div class="row">
-          <div class="col-md-1"></div> 
-            <div class="col-md-5 text-center"><img class="banner" src="ses-header.png"></div>
-            <div class="col-md-5 text-center"><img class="banner" src="ses-header.png"></div> 
-            <div class="col-md-1"></div> 
-          </div>
-      </div>
-    </div> End jumbotron club-header -->
+    </div>
 
-    <div class="jumbotron club-header">
-        <div class="container-fluid text-center">
-            <h1 class="display-4 page-title">Software Engineering Society</h1>
-        </div>
-      </div>
-    <div class="row sidebar-main">
-      <nav class="col-md-2 d-none d-md-block bg-light sidebar text-left">
-        <div class="sidebar-sticky">
-          <ul class="nav flex-column">
-              <div class="sidebar-title">Our Club</div>
-              <hr class="sidebar-divider">
-            <!-- <li class="nav-item sidebar-header">
-                <div class="sidebar-title">Our Club</div>
-                <hr class="sidebar-divider">
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link active" href="#description">
-                <i class="nav-icon far fa-list-alt"></i>Description
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#gallery">
-                <i class="nav-icon far fa-images"></i>Photos
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#events">
-                <i class="nav-icon fas fa-calendar-alt"></i>Calendar
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">
-                <i class="nav-icon far fa-comments"></i>Contact Us
-              </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./index.html">
-                  <i class="nav-icon fas fa-home"></i>Maclubz Homepage
-                </a>
-              </li>
-            <hr class="sidebar-contact-divider">
-            <div class="sidebar-title">Connect with Us</div>
-
-            <hr class="sidebar-divider">
-
-            <div class="contact-info text-center">
-              <p>Software Engineering Society</p>
-              <p>software@mcmaster.ca</p>
-              <p>Office: ITB 232</p>
-            </div>
-
-            <hr class="sidebar-divider">
-
-            <div class="social-item">
-                <a class="nav-link" href="#">
-                    <i class="nav-icon fas fa-envelope"></i>Email
-                </a>
-            </div>
-
-            <div class="social-item">
-                <a class="nav-link" href="#">
-                  <i class="nav-icon fab fa-twitter-square"></i>Twitter
-                </a>
-            </div>
-            <div class="social-item">
-                <a class="nav-link" href="#">
-                  <i class="nav-icon fab fa-facebook"></i>Facebook
-                </a>
-            </div>
-
-          </ul>
-		    </div>
-      </nav> <!--End nav-->
-
-      <div class="container col-md-10 d-none d-md-block bg-light">
-        <div class="row section-club-highlight">
-          <div class="col-md-10">
+      <div class="container-fluid align-self-start">
+        <div class="row section section-club-highlight">
+          <div class="col-md-8">
             <div>
               <h1 class="display-5 section-title">Software Engineering Society</h1>
-              <hr class="section-title-divider" id="club-title-divider">
+              <hr class="section-title-divider">
             </div>
             <div class="row content">
               <div class="col-md-1"></div>
@@ -132,11 +58,11 @@
 
         <hr class="section-divider">
 
-        <div class="row section-club-description" id="description">
+        <div class="row section section-club-description" id="description">
           <div class="col-md-10">
             <div>
               <h1 class="display-5 section-title">Description</h1>
-              <hr class="section-title-divider" id="description-title-divider">
+              <hr class="section-title-divider">
             </div>
           <div class="row content">
               <div class="col-md-10 text-left">
@@ -163,11 +89,11 @@
 
         <hr class="section-divider">
 
-        <div class="row section-gallery" id="gallery">
+        <div class="row section section-gallery" id="gallery">
           <div class="col-md-10">
             <div>
-              <h1 class="display-5 section-title">Photos</h1>
-              <hr class="section-title-divider" id="description-title-divider">
+              <h1 class="display-5 section-title-white">Photos</h1>
+              <hr class="section-title-divider">
             </div>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Wrapper for slides -->
@@ -208,11 +134,11 @@
       
         <hr class="section-divider">
 
-        <div class="row section-calendar" id="events">
+        <div class="row section section-calendar" id="events">
           <div class="col-md-10">
             <div>
               <h1 class="display-5 section-title">Calendar of Events</h1>
-              <hr class="section-title-divider" id="events-title-divider">
+              <hr class="section-title-divider">
             </div>
             <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=e5m14f28esqqtiacerh1imp5io%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto"></iframe>
           </div>
@@ -221,11 +147,11 @@
         <hr class="section-divider">
 
         <div class="row section-contact text-center" id=contact>
-          <div>
-            <h1 class="display-5 section-title">Contact Us</h1>
-            <hr class="section-title-divider">
+          <div class="container text-center">
+            <h1 class="display-5 section-title-contact">Contact Us</h1>
+            <hr class="section-title-divider-contact">
           </div>
-          <div class="col-md-10">
+          <div class="container-fluid">
             <div class="row sub-section-contact">
               <div class="col-md-6 contact-entry"><i class="nav-icon fas fa-envelope"></i> software@mcmaster.ca</div>
               <div class="col-md-6 contact-entry"><i class="nav-icon fas fa-envelope"></i>
@@ -236,37 +162,15 @@
         </div> <!--End contact section-->
 
       </div>
-    </div> <!--End row-sidebar (main screen)-->
 	
 	   <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" 
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+    crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <!-- Supporting script files -->
-    <script>
-	$(function() {
-
-    var $sidebar   = $(".nav"), 
-        $window    = $(window),
-        offset     = $sidebar.offset(),
-        topPadding = 0;
-
-    $window.scroll(function() {
-        if ($window.scrollTop() > offset.top) {
-            $sidebar.stop().animate({
-                marginTop: $window.scrollTop() - offset.top + topPadding
-            });
-        } else {
-            $sidebar.stop().animate({
-                marginTop: 0
-            });
-        }
-    });
-    
-	});
-	</script>
 
   </body>
 </html>
