--- a/public/stylesheets/viewteam.css
+++ b/public/stylesheets/viewteam.css
@@ -3,6 +3,8 @@
  */
 
 .dropdown {
+    font-family: 'Roboto';
+    font-size: 0.95em;
     position: absolute;
     top: 5%;
     left: 1%;
@@ -23,6 +25,8 @@
 .dropdown-menu {
     background-color: #6d1e31;
     color: white;
+    font-family: 'Roboto';
+    font-size: 0.95em;
 }
 
 .dropdown-toggle:hover,
@@ -103,8 +107,10 @@ body {
 }
 
 .club-quotes {
+  margin-top: 1%;
   font-style: italic;
   font-size: 1.5em;
+  color: black;
 }
 
 .quote-author {
@@ -112,7 +118,7 @@ body {
   font-size: 0.75em;
   text-align: left;
   padding-left: 10%;
-  margin-bottom: 10%;
+  margin-bottom: 9%;
 }
 
 
