--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -91,10 +91,11 @@
         <hr class="section-divider">
 
         <div class="row section section-gallery" id="gallery">
+
         <div class="col-md-10">
             <div>
               <h1 class="display-5 section-title-white">Photos</h1>
-              <hr class="section-title-divider">
+              <hr class="section-title-divider-gallery">
             </div>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Wrapper for slides -->
@@ -120,6 +121,7 @@
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
+            
             <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
