--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -72,15 +72,17 @@
 	
 			<% teams.forEach(function(team) { %>
 			<div class="col-4 p-3 teams" name="<%= team.name %>" type="<%= team.type %>">
-				<div class="card">
-					<img class="card-img-top" src="<%= team.mainImage %>" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title"><%= team.name %></h5>
-						<hr class="hr-maroon">
-						<p class="card-text"><%= team.flavourText %></p>
-						<p class="card-text"><small class="text-muted"><a href="#"><i class="far fa-envelope"></i> <%=  team.email %></a></small></p>
+				<a class="non-link" href="teams/<%= team._id %>">
+					<div class="card">
+						<img class="card-img-top" src="<%= team.mainImage %>" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="card-title"><%= team.name %></h5>
+							<hr class="hr-maroon">
+							<p class="card-text"><%= team.flavourText %></p>
+							<p class="card-text"><small class="text-muted"><a href="#"><i class="far fa-envelope"></i> <%=  team.email %></a></small></p>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 			<% });%> 
 			<div class="col-12">
@@ -104,7 +106,7 @@
 					<input class="login-input m-2" type="text" placeholder="Username">
 					<br>
 					<i class="fas fa-key password-icon"></i>
-					<input class="login-input m-2" type="text" placeholder="Password">
+					<input class="login-input m-2" type="password" placeholder="Password">
 					<br>
 					<button class="btn-login mt-1">Login</button>
 				</div>
