--- a/public/stylesheets/viewteam.css
+++ b/public/stylesheets/viewteam.css
@@ -68,7 +68,7 @@ body {
 }
 
 .section-club-highlight {
-    background-color: lightgray;
+    background-color: #EDEDED;
 }
 
 .section-club-description {
