--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -36,6 +36,54 @@
             </div>
         </div>
         
+        <div>
+            <img class="nav-menu-img" src="/images/graphic-3.png">
+        </div>
+
+        <div class="nav-menu text-center sidebar">
+            <div class="sidebar-title">Sections</div>
+            <hr class="sidebar-divider">
+            <ul><li class="nav-item">
+                    <a class="nav-link active" href="#description">
+                      <i class="nav-icon far fa-list-alt"></i>Description
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#gallery">
+                      <i class="nav-icon far fa-images"></i>Photos
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#events">
+                      <i class="nav-icon fas fa-calendar-alt"></i>Calendar
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/">
+                        <i class="nav-icon fas fa-home"></i>Maclubz Homepage
+                      </a>
+                    </li></ul>
+                  <div class="sidebar-title">Connect with Us</div>
+      
+                  <hr class="sidebar-divider">      
+                  <div class="social-item">
+                      <a class="nav-link" href="#">
+                          <i class="nav-icon fas fa-envelope"></i>Email
+                      </a>
+                  </div>
+      
+                  <div class="social-item">
+                      <a class="nav-link" href="#">
+                        <i class="nav-icon fab fa-twitter-square"></i>Twitter
+                      </a>
+                  </div>
+                  <div class="social-item">
+                      <a class="nav-link" href="#">
+                        <i class="nav-icon fab fa-facebook"></i>Facebook
+                      </a>
+                  </div>
+        </div>
+
         <main class="container-fluid align-self-start">   
             <div class="row section section-club-highlight">
             <div class="col-md-10">
@@ -45,7 +93,7 @@
                 </div>
                 <div class="row content">
                     <div class="col-md-1"></div>
-                    <div class="col-md-4 text-center"><img class="banner" src="/assets/small_SEC.png"></div>
+                    <div class="col-md-4 text-center"><img class="banner" src="/images/small_SEC.png"></div>
                     <div class="col-md-1"></div>
                     <div class="col-md-5 text-left club-quotes">
                         "Software design is for everyone, young and old, male and female"
@@ -101,12 +149,12 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="/assets/open_source_img.jpg">
+                        <img class="d-block w-100" src="/images/open_source_img.jpg">
                         <!--Image source: nochallenge.net-->
                     </div>
               
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="/assets/ml-infographic.jpg">
+                        <img class="d-block w-100" src="/images/ml-infographic.jpg">
                         <!--Image source: Intel Developer Zone-->
                     </div>
               
