--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -21,7 +21,7 @@
   </head>
 
     <body>
-        <div class="dropdown show">
+        <!-- <div class="dropdown show">
             <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Navigation
             </a>
@@ -34,7 +34,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="mailto:ses@noreply.com"><i class="nav-icon fas fa-envelope"></i>Send us an email</a>
             </div>
-        </div>
+        </div> -->
         
         <div>
             <img class="nav-menu-img" src="/images/graphic-3.png">
