Add shadow to logo text.

--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -2,7 +2,7 @@ body{
 	overflow-x: hidden;
 	font-family: 'Oswald', sans-serif;
 	background: linear-gradient(rgba(255, 255, 255, 0.40), rgba(255, 255, 255, 0.40)), url("../images/landing-background.jpg");
-	background-size: cover;
+	background-size: 100%;
 }
 
 .results-title {
@@ -15,6 +15,7 @@ body{
    	font-weight: normal; 
    	font-style: normal;
    	cursor: pointer;
+   	text-shadow: 0 5px 5px rgba(0, 0, 0, 0.6);
 }
 
 .search-box {
@@ -25,7 +26,6 @@ body{
 	padding: 5px;
 	padding-left: 5%;
 	border: 1px solid #5E6A71;
-	/*box-shadow: 0 10px 10px rgba(0,0,0,0.6);*/
 	color: #5E6A71;
 	font-weight: 300;
 	caret-color: #7A003C;
