--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -18,127 +18,116 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
-  </head>
+</head>
 
-    <body>
-        <!-- <div class="dropdown show">
-            <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Navigation
+<body>
+
+    <% if (currentUser){ %>
+        <h1 class="edit-page" data-toggle="modal" data-target="#exampleModal">EDIT PAGE</h1>
+    <% } %>
+    
+    <div class="nav-menu text-center sidebar">
+        <div class="sidebar-title">Sections</div>
+        <hr class="sidebar-divider">
+        <ul>
+            <li class="nav-item">
+                <a class="nav-link active" href="#description">
+                    <i class="nav-icon far fa-list-alt"></i>Description
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#gallery">
+                    <i class="nav-icon far fa-images"></i>Photos
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#events">
+                    <i class="nav-icon fas fa-calendar-alt"></i>Calendar
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/">
+                    <i class="nav-icon fas fa-home"></i>Maclubz Homepage
+                </a>
+            </li>
+        </ul>
+        <div class="sidebar-title">Connect with Us</div>
+        <hr class="sidebar-divider">      
+        <div class="social-item">
+          <a class="nav-link" href="mailto:<%= team.email%>">
+              <i class="nav-icon fas fa-envelope"></i>Email
+          </a>
+        </div>
+
+        <div class="social-item">
+          <a class="nav-link" href="https://www.twitter.com">
+            <i class="nav-icon fab fa-twitter-square"></i>Twitter
+        </a>
+        </div>
+        <div class="social-item">
+            <a class="nav-link" href="https://www.facebook.com">
+                <i class="nav-icon fab fa-facebook"></i>Facebook
             </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#description"><i class="nav-icon far fa-list-alt"></i>Club Description</a>
-                <a class="dropdown-item" href="#gallery"><i class="nav-icon far fa-images"></i>Photo Gallery</a>
-                <a class="dropdown-item" href="#events"><i class="nav-icon fas fa-calendar-alt"></i>Calendar of Events</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/"><i class="nav-icon fas fa-home"></i>Return to Maclubz Homepage</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="mailto:ses@noreply.com"><i class="nav-icon fas fa-envelope"></i>Send us an email</a>
-            </div>
-        </div> -->
-        
-        <div>
-            <img class="nav-menu-img" src="/images/graphic-3.png">
         </div>
+    </div>
 
-        <div class="nav-menu text-center sidebar">
-            <div class="sidebar-title">Sections</div>
-            <hr class="sidebar-divider">
-            <ul><li class="nav-item">
-                    <a class="nav-link active" href="#description">
-                      <i class="nav-icon far fa-list-alt"></i>Description
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#gallery">
-                      <i class="nav-icon far fa-images"></i>Photos
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#events">
-                      <i class="nav-icon fas fa-calendar-alt"></i>Calendar
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/">
-                        <i class="nav-icon fas fa-home"></i>Maclubz Homepage
-                      </a>
-                    </li></ul>
-                  <div class="sidebar-title">Connect with Us</div>
-      
-                  <hr class="sidebar-divider">      
-                  <div class="social-item">
-                      <a class="nav-link" href="#">
-                          <i class="nav-icon fas fa-envelope"></i>Email
-                      </a>
-                  </div>
-      
-                  <div class="social-item">
-                      <a class="nav-link" href="#">
-                        <i class="nav-icon fab fa-twitter-square"></i>Twitter
-                      </a>
-                  </div>
-                  <div class="social-item">
-                      <a class="nav-link" href="#">
-                        <i class="nav-icon fab fa-facebook"></i>Facebook
-                      </a>
-                  </div>
+<main class="container-fluid">  
+    <div class="row section section-club-highlight">
+        <div class="col-md-10">
+            <div>
+                <h1 class="display-5 section-title"><%= team.name %></h1>
+                <hr class="section-title-divider">
+            </div>
+            <div class="row content">
+                <div class="col-md-1"></div>
+                <div class="col-md-4 text-center"><img class="banner" src="<%= team.mainImage %>"></div>
+                <div class="col-md-1"></div>
+                <div class="col-md-5 text-left club-quotes">
+                    "<%= team.quotes[0][0] %>"
+                    <div class="quote-author">- <%= team.quotes[0][1] %></div>
+                    "<%= team.quotes[1][0] %>"
+                    <div class="quote-author">- <%= team.quotes[1][1] %></div>
+                </div> <!--End club-quotes-->
+            </div>
         </div>
+    </div> <!--End club-highlight-->
 
-        <main class="container-fluid align-self-start">   
-            <div class="row section section-club-highlight">
-            <div class="col-md-10">
-                <div>
-                    <h1 class="display-5 section-title"><%= team.name %></h1>
-                    <hr class="section-title-divider">
-                </div>
-                <div class="row content">
-
-                    <div class="col-md-1"></div>
-                    <div class="col-md-4 text-center"><img class="banner" src="/images/small_SEC.png"></div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-5 text-left club-quotes">
-                        "Software design is for everyone, young and old, male and female"
-                        <div class="quote-author">- Jayanthi Uthayakumar, Club President</div>
-                        "The Software Engineering Society is full of talent, technology, and learning"
-                        <div class="quote-author">- John Smith, Member, 1st Year Engineering Student</div>
-                    </div> <!--End club-quotes-->
+    <div class="row section section-club-description" id="description">
+        <div class="col-md-10">
+            <div>
+                <h1 class="display-5 section-title">Description</h1>
+                <hr class="section-title-divider">
+            </div>
+            <div class="row content">
+                <div class="col-md-10 text-left">
+                    <%= team.description %>
                 </div>
             </div>
-        </div> <!--End club-highlight-->
+        </div>
+    </div> <!--End club-description-->
 
-        <div class="row section section-club-description" id="description">
-            <div class="col-md-10">
-                <div>
-                    <h1 class="display-5 section-title">Description</h1>
-                    <hr class="section-title-divider">
+    <div class="row section section-gallery" id="gallery">
+
+        <div class="col-md-10">
+            <div>
+              <h1 class="display-5 section-title-white">Photos</h1>
+              <hr class="section-title-divider-gallery">
+          </div>
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="<%= team.carouselImages[0] %>">
+                    <!--Image source: nochallenge.net-->
                 </div>
-                <div class="row content">
-                    <div class="col-md-10 text-left">
-                        <%= team.description %>
-                    </div>
+
+                <% for(let i = 1; i < team.carouselImages.length; i++){ %>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="<%= team.carouselImages[i] %>">
+                    <!--Image source: Intel Developer Zone-->
                 </div>
-            </div>
-        </div> <!--End club-description-->
-
-        <div class="row section section-gallery" id="gallery">
-
-            <div class="col-md-10">
-                <div>
-                  <h1 class="display-5 section-title-white">Photos</h1>
-                  <hr class="section-title-divider-gallery">
-              </div>
-              <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="/images/open_source_img.jpg">
-                        <!--Image source: nochallenge.net-->
-                    </div>
-
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/ml-infographic.jpg">
-                        <!--Image source: Intel Developer Zone-->
-                    </div>
+                <% } %>
 
                   <!-- <div class="carousel-item">
                     <img class="d-block w-100" src="ses-header.png">
@@ -188,6 +177,23 @@
             </div>
         </div>
     </div> <!--End contact section-->
+
+        <!-- MODAL FOR LOGIN -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content text-center">
+                <div class="modal-header">
+                    <h2 class="modal-title text-center" id="exampleModalLabel">Out of Scope</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>See documentation for more details.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </main>
 
