Add categories for clubs and teams.

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -69,8 +69,11 @@
 						<select class="category">
 							<option>Select Category</option>
 							<option>Academic</option>
-							<option>Sports</option>
-							<option>Other</option>
+							<option>Games</option>
+							<option>Outdoor</option>
+							<option>Public Speaking</option>
+							<option>Theatre</option>
+							<option>Volunteer</option>
 						</select>
 					</div>
 				</div>
