Add calendar support for different clubs and teams.

--- a/views/viewteam.ejs
+++ b/views/viewteam.ejs
@@ -159,7 +159,7 @@
                 <h1 class="display-5 section-title">Calendar of Events</h1>
                 <hr class="section-title-divider">
             </div>
-            <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=e5m14f28esqqtiacerh1imp5io%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto"></iframe>
+            <iframe id="calendar" src="<%= team.calendar %>"></iframe>
         </div>
     </div> <!--End calendar section-->
 
